service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csi-service
spec:
  selector:
    app: csi
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
